unify variables naming convention